--- a/Week 2/Day 1/Core/ConvertToArrow/index.html
+++ b/Week 2/Day 1/Core/ConvertToArrow/index.html
@@ -23,36 +23,45 @@
     </div>
     <p>
       We just like random interactivity in the site, including a fun effect if
-      you hover over <span id="hover-this"> <b>this.</b></span>
+      you hover over <span id="hover-this"><b>this.</b></span>
+    </p>
+    <p
+      id="set-color"
+      onclick="functionFromBelow('argumentOne', document.getElementById('argumentTwo').value)"
+    >
+      We can click anywhere in this paragraph tag and it will change the
+      background color to whatever is in this input:
+      <input type="text" id="color-input" />
     </p>
     <p onmouseover="mouseOverFunction(this)">
-      Another task: This should be another feature. I want to click anywhere in
-      this paragraph tag and I want to be able to change the background color to
-      whatever is in this input: <input type="text" />.
+      Moving your mouse over this text will make it black, so you cannot read
+      it!
     </p>
     <script>
       document.getElementById("button").onclick = () => {
         setBackgroundColorById("paragraph", "blue");
       };
-      document.getElementById("alert").onclick = () => {
+      document.getElementById("alert").onclick = function () {
         alert(document.getElementById("popup-input").value);
       };
       document.getElementById("hover-this").onmouseover = () => {
         setBackgroundColorById("body", "red");
       };
-
-      document.getElementById("hover-this").onmouseout = function () {
+      document.getElementById("hover-this").onmouseout = () => {
         setBackgroundColorById("body", "white");
       };
-      function getValueFromId(id) {
+
+      getValueFromId = (id) => {
         return document.getElementById(id).value;
-      }
-      function setBackgroundColorById(id, color) {
+      };
+
+      setBackgroundColorById = (id, color) => {
         document.getElementById(id).style = "background-color: " + color;
-      }
-      function mouseOverFunction(el) {
+      };
+
+      mouseOverFunction = (el) => {
         el.style = "background-color: black";
-      }
+      };
     </script>
   </body>
 </html>
